--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
